deploy: jsw-zorro/personal-website@92ea67892b50e0b32059380d77bf6d737eadf99e

--- a/slides/example/index.html
+++ b/slides/example/index.html
@@ -19,7 +19,7 @@
   <link rel="icon" type="image/png" href="/media/icon_hub47520861efba16e2bd7be0edc918a7b_1727177_32x32_fill_lanczos_center_3.png">
   <link rel="apple-touch-icon" type="image/png" href="/media/icon_hub47520861efba16e2bd7be0edc918a7b_1727177_192x192_fill_lanczos_center_3.png">
 
-  <link rel="canonical" href="https://example.com/slides/example/">
+  <link rel="canonical" href="https://jsw-zorro.github.io/slides/example/">
 
   <title>Slides | Shuowei Jin</title>
 
