--- a/backup/publication/preprint/index.html
+++ b/backup/publication/preprint/index.html
@@ -234,6 +234,7 @@
   
   
 
+  <meta name="google-site-verification" content="LYQaybSRjCuWGd_s3yZM98yeKGEak7EZkDXGdICCWuw" />
 
 
 
@@ -312,8 +313,8 @@
 
 <meta property="twitter:card" content="summary_large_image" />
 
-  <meta property="twitter:site" content="@wowchemy" />
-  <meta property="twitter:creator" content="@wowchemy" />
+  <meta property="twitter:site" content="@shuoweijin" />
+  <meta property="twitter:creator" content="@shuoweijin" />
 <meta property="twitter:image" content="https://jsw-zorro.github.io/backup/publication/preprint/featured.jpg" />
 <meta property="og:site_name" content="Shuowei Jin" />
 <meta property="og:url" content="https://jsw-zorro.github.io/backup/publication/preprint/" />
