--- a/publication/vivisecting_mobility_management_in_5g/index.html
+++ b/publication/vivisecting_mobility_management_in_5g/index.html
@@ -234,6 +234,7 @@
   
   
 
+  <meta name="google-site-verification" content="LYQaybSRjCuWGd_s3yZM98yeKGEak7EZkDXGdICCWuw" />
 
 
 
@@ -313,8 +314,8 @@
 
 <meta property="twitter:card" content="summary" />
 
-  <meta property="twitter:site" content="@wowchemy" />
-  <meta property="twitter:creator" content="@wowchemy" />
+  <meta property="twitter:site" content="@shuoweijin" />
+  <meta property="twitter:creator" content="@shuoweijin" />
 <meta property="twitter:image" content="https://jsw-zorro.github.io/media/icon_hub47520861efba16e2bd7be0edc918a7b_1727177_512x512_fill_lanczos_center_3.png" />
 <meta property="og:site_name" content="Shuowei Jin" />
 <meta property="og:url" content="https://jsw-zorro.github.io/publication/vivisecting_mobility_management_in_5g/" />
