deploy: jsw-zorro/personal-website@7c60218b1b7de83299ae210f0fa882315225582b

--- a/publication/vivisecting_mobility_management_in_5g/index.html
+++ b/publication/vivisecting_mobility_management_in_5g/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: September 27, 2023 --><html lang="en-us" >
+<!-- Last Published: September 28, 2023 --><html lang="en-us" >
 
 
 <head>
@@ -1116,7 +1116,7 @@
     <div class="media-body">
       <h5 class="card-title"><a href="https://shuoweijin.com">Shuowei Jin</a></h5>
       <h6 class="card-subtitle">PhD Candidate at University of Michigan CSE</h6>
-      <p class="card-text">My research interests include distributed robotics, mobile computing and programmable matter.</p>
+      <p class="card-text">My research interests include systems for ML, ML for systems, and mobile network systems.</p>
       <ul class="network-icon" aria-hidden="true">
   
     
