--- a/publication-type/1/index.html
+++ b/publication-type/1/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: September 28, 2023 --><html lang="en-us" >
+<!-- Last Published: September 29, 2023 --><html lang="en-us" >
 
 
 <head>
@@ -818,7 +818,7 @@
     
     <a href="/publication/poster-quic/"  class="summary-link">
       <div class="article-style">
-        Collaborative perception, which greatly enhances the sensing capability of connected and autonomous vehicles (CAVs) by incorporating …
+        QUIC is a multiplexed transport-layer protocol over UDP and comes with enforced encryption. It is expected to be a game-changer in …
       </div>
     </a>
     
