deploy: jsw-zorro/personal-website@f86cd05fdd4b9f181fd14c8f0cc3e2e06b37703b

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: October 20, 2023 --><html lang="en-us" >
+<!-- Last Published: November 11, 2023 --><html lang="en-us" >
 
 
 <head>
@@ -987,7 +987,7 @@
     <div class="article-style">
       <p>I am a fourth-year PhD Candidate in the <a href="https://cse.engin.umich.edu/" target="_blank" rel="noopener">Computer Science and Engineering Department</a> at the <a href="https://umich.edu/" target="_blank" rel="noopener">University of Michigan, Ann Arbor</a> under the supervision of <a href="https://web.eecs.umich.edu/~zmao/" target="_blank" rel="noopener">Prof. Morley Mao</a>. I received my bachelor&rsquo;s degree from the <a href="https://en.scgy.ustc.edu.cn/" target="_blank" rel="noopener">School of the Gifted Young</a> at the <a href="https://en.ustc.edu.cn/" target="_blank" rel="noopener">University of Science and Technology of China</a>, majoring in computer science and advised by <a href="http://staff.ustc.edu.cn/~weigong/" target="_blank" rel="noopener">Prof. Wei Gong</a>.</p>
 <p>My current research interests lie in creating systems to support machine learning model deployments (Systems for ML) and building intelligent and reliable network systems with machine learning models (ML for Systems).</p>
-<p>I am a research intern at <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-redmond/" target="_blank" rel="noopener">Microsoft Research Redmond</a>, in the summer of 2023, fortunately working with <a href="https://francisyyan.org/" target="_blank" rel="noopener">Dr. Francis Y. Yan</a> on building systems to optimize the performance of machine learning models in 5G vRAN. I also interned at <a href="https://damo.alibaba.com/?lang=en" target="_blank" rel="noopener">Alibaba DAMO Academy</a>, in the summer of 2020, collaborating with Dr. Hong Wu and Dr. Tieying Zhang on applying machine learning to automatically tune database systems. I also work with <a href="https://vnpeng.net/" target="_blank" rel="noopener">Prof. Nanyun Peng</a> as a research intern at the <a href="https://www.isi.edu/" target="_blank" rel="noopener">USC Information Sciences Institute</a> in 2019 summer to apply language models on extracting event hierarchy.</p>
+<p>I am a research intern at <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-redmond/" target="_blank" rel="noopener">Microsoft Research Redmond</a>, in the summer of 2023, fortunately working with <a href="https://francisyyan.org/" target="_blank" rel="noopener">Dr. Francis Y. Yan</a> on building systems to optimize the performance of machine learning models in network system. I also interned at <a href="https://damo.alibaba.com/?lang=en" target="_blank" rel="noopener">Alibaba DAMO Academy</a>, in the summer of 2020, collaborating with Dr. Hong Wu and Dr. Tieying Zhang on applying machine learning to automatically tune database systems. I also work with <a href="https://vnpeng.net/" target="_blank" rel="noopener">Prof. Nanyun Peng</a> as a research intern at the <a href="https://www.isi.edu/" target="_blank" rel="noopener">USC Information Sciences Institute</a> in 2019 summer to apply language models on extracting event hierarchy.</p>
 <!-- During my PhD period, I work closely with [Prof. Feng Qian](https://www-users.cse.umn.edu/~fengqian/) from the University of Southern California and [Prof. Zhi-Li Zhang](https://www-users.cse.umn.edu/~zhang089/) from the University of Minnesota. -->
 
     </div>
@@ -1186,7 +1186,7 @@
                 
               </div>
 
-          <div class="card-text">Work on building system to optimize machine learning model deployments in 5G vRAN.</div>
+          <div class="card-text">Work on building system to optimize machine learning model deployments in Network System.</div>
         </div>
       </div>
     </div>
