deploy: jsw-zorro/personal-website@697d227770eaff17460680af20db2f3e0d9431ee

--- a/misc/music/music-zhangxuan/index.html
+++ b/misc/music/music-zhangxuan/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: December 3, 2023 --><html lang="en-us" >
+<!-- Last Published: December 13, 2023 --><html lang="en-us" >
 
 
 <head>
@@ -316,7 +316,7 @@
 
   
 
-<meta name="description" content="张悬 (Deserts Chang), also known as 安溥 (An Pu), is a highly respected figure in the Taiwanese indie music scene, known for her unique voice and deeply introspective songwriting. Born in Taipei, Deserts Chang has carved a niche for herself with her distinctive style, blending elements of folk, alternative rock, and poetic lyrics. Her album &#34;神的游戏 (Games We Play),&#34; released in 2012, stands as a testament to her artistic depth and musical versatility. This album is particularly noted for its exploration of complex emotional landscapes and social commentary, delivered through Chang&#39;s captivatingly raw and honest vocal style." />
+<meta name="description" content="张悬 (Deserts Chang), also known as 安溥 (An Pu), is known for her unique voice and deeply introspective songwriting. Born in Taipei, Deserts Chang has carved a niche for herself with her distinctive style, blending elements of folk, alternative rock, and poetic lyrics. Her album &#34;神的游戏 (Games We Play),&#34; released in 2012, stands as a testament to her artistic depth and musical versatility. This album is particularly noted for its exploration of complex emotional landscapes and social commentary, delivered through Chang&#39;s captivatingly raw and honest vocal style." />
 
 
 
@@ -358,7 +358,7 @@
 <meta property="og:site_name" content="Shuowei Jin" />
 <meta property="og:url" content="https://shuoweijin.com/misc/music/music-zhangxuan/" />
 <meta property="og:title" content="Deserts Chang (张悬)/An Pu (安溥) | Shuowei Jin" />
-<meta property="og:description" content="张悬 (Deserts Chang), also known as 安溥 (An Pu), is a highly respected figure in the Taiwanese indie music scene, known for her unique voice and deeply introspective songwriting. Born in Taipei, Deserts Chang has carved a niche for herself with her distinctive style, blending elements of folk, alternative rock, and poetic lyrics. Her album &#34;神的游戏 (Games We Play),&#34; released in 2012, stands as a testament to her artistic depth and musical versatility. This album is particularly noted for its exploration of complex emotional landscapes and social commentary, delivered through Chang&#39;s captivatingly raw and honest vocal style." /><meta property="og:image" content="https://shuoweijin.com/misc/music/music-zhangxuan/featured.jpeg" /><meta property="og:locale" content="en-us" />
+<meta property="og:description" content="张悬 (Deserts Chang), also known as 安溥 (An Pu), is known for her unique voice and deeply introspective songwriting. Born in Taipei, Deserts Chang has carved a niche for herself with her distinctive style, blending elements of folk, alternative rock, and poetic lyrics. Her album &#34;神的游戏 (Games We Play),&#34; released in 2012, stands as a testament to her artistic depth and musical versatility. This album is particularly noted for its exploration of complex emotional landscapes and social commentary, delivered through Chang&#39;s captivatingly raw and honest vocal style." /><meta property="og:image" content="https://shuoweijin.com/misc/music/music-zhangxuan/featured.jpeg" /><meta property="og:locale" content="en-us" />
 
   
     <meta
