deploy: jsw-zorro/personal-website@cfe60df2e1d4a3c031937a50e2efd8ac6cb34464

--- a/misc/music/music-zhangxuan/index.html
+++ b/misc/music/music-zhangxuan/index.html
@@ -915,7 +915,7 @@
   <div class="article-container">
 
     <div class="article-style">
-      <p>张悬 (Deserts Chang), also known as 安溥 (An Pu), is a highly respected figure in the Taiwanese indie music scene, known for her unique voice and deeply introspective songwriting. Born in Taipei, Taiwan, Deserts Chang has carved a niche for herself with her distinctive style, blending elements of folk, alternative rock, and poetic lyrics.</p>
+      <p>张悬 (Deserts Chang), also known as 安溥 (An Pu), is known for her unique voice and deeply introspective songwriting. Born in Taipei, Taiwan, Deserts Chang has carved a niche for herself with her distinctive style, blending elements of folk, alternative rock, and poetic lyrics.</p>
 <p>Her album &ldquo;神的游戏 (Games We Play),&rdquo; released in 2012, stands as a testament to her artistic depth and musical versatility. This album is particularly noted for its exploration of complex emotional landscapes and social commentary, delivered through Chang&rsquo;s captivatingly raw and honest vocal style.</p>
 <p>The album&rsquo;s tracks range from the hauntingly beautiful to the starkly minimalist, with lyrics that delve into themes of love, loneliness, societal expectations, and personal identity. Songs like &ldquo;玫瑰色的你 (Rose-Colored You)&rdquo; resonated with a generation of listeners, earning her a dedicated following.</p>
 <p>&ldquo;Games We Play&rdquo; is characterized by its thoughtful arrangement and Deserts Chang&rsquo;s ability to convey profound emotion through her music. Her ability to craft songs that are both personal and universally relatable has made this album a landmark in the Mandarin indie music scene.</p>
