deploy: jsw-zorro/personal-website@994989dff3f576c1fe9ffea02e3aadb462602e4a

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: December 13, 2023 --><html lang="en-us" >
+<!-- Last Published: December 26, 2023 --><html lang="en-us" >
 
 
 <head>
@@ -2179,7 +2179,7 @@
 
 <div class="col-12 ">
 
-  <center>Things I love</center>.
+  <center>Ars longa, vita brevis (艺术千秋，人生朝露)</center>.
 
   
 
