--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: January 17, 2024 --><html lang="en-us" >
+<!-- Last Published: January 20, 2024 --><html lang="en-us" >
 
 
 <head>
@@ -1917,7 +1917,7 @@
   <div class="col-12 col-lg-8">
     <ul>
 <li><strong>Conference Reviewer</strong>: ACM WWW 2024, NeurIPS 2023, ICML 2023.</li>
-<li><strong>Journal Reviewer</strong>: IEEE TMC, IEEE Network Magazine.</li>
+<li><strong>Journal Reviewer</strong>: Neural Networks, IEEE TMC, IEEE Network Magazine.</li>
 </ul>
 
   </div>
