--- a/publication-type/1/index.html
+++ b/publication-type/1/index.html
@@ -977,7 +977,7 @@
       Anlan Zhang</span>, <span >
       Wei Ye</span>, <span >
       Jason Carpenter</span>, <span >
-      Ruiyang Zhu</span>, <span >
+      Ruiyang Zhu</span>, <span class="author-highlighted">
       Shuowei Jin</span>, <span >
       Z. Morley Mao</span>, <span >
       Feng Qian</span>, <span >
