--- a/publication/index.html
+++ b/publication/index.html
@@ -1049,7 +1049,7 @@
       Anlan Zhang</span>, <span >
       Wei Ye</span>, <span >
       Jason Carpenter</span>, <span >
-      Ruiyang Zhu</span>, <span >
+      Ruiyang Zhu</span>, <span class="author-highlighted">
       Shuowei Jin</span>, <span >
       Z. Morley Mao</span>, <span >
       Feng Qian</span>, <span >
