deploy: jsw-zorro/personal-website@967e45992b8fe524697e8ddd5dec0ead21163038

--- a/publication/sgd/index.html
+++ b/publication/sgd/index.html
@@ -858,8 +858,8 @@
     
 
   <span class="author-highlighted">
-      Shuowei Jin</span>, <span >
-      Yongji Wu</span>, <span >
+      Shuowei Jin</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>, <span >
+      Yongji Wu</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>, <span >
       Haizhong Zheng</span>, <span >
       Qingzhao Zhang</span>, <span >
       Matthew Lentz</span>, <span >
