deploy: jsw-zorro/personal-website@bf773abef85f194aead79c3aaeefcc9d823f861c

--- a/index.html
+++ b/index.html
@@ -1195,9 +1195,49 @@
   <div class="col-12 col-lg-8">
     <p>Recent topics of my research:</p>
 <ul>
-<li><strong>Efficient LLM Inference Algorithm/Systems</strong>: <a href="https://arxiv.org/abs/2410.03065" target="_blank" rel="noopener">Cake</a>, <a href="https://arxiv.org/abs/2402.12280" target="_blank" rel="noopener">SGD</a>, <a href="https://arxiv.org/abs/2409.15518" target="_blank" rel="noopener">Eagle</a></li>
-<li><strong>Machine Learning Systems</strong>: <a href="https://arxiv.org/abs/2409.10897" target="_blank" rel="noopener">AutoSpec</a>, <a href="https://dl.acm.org/doi/10.1145/3625468.3647610" target="_blank" rel="noopener">Oasis</a>, <a href="https://dl.acm.org/doi/pdf/10.1145/3448016.3457291" target="_blank" rel="noopener">Restune</a></li>
-<li><strong>Network Systems</strong>: <a href="https://dl.acm.org/doi/pdf/10.1145/3452296.3472923" target="_blank" rel="noopener">5G</a>, <a href="https://dl.acm.org/doi/pdf/10.1145/3589334.3645323" target="_blank" rel="noopener">QUIC</a></li>
+<li><strong>Efficient LLM Inference Algorithm/Systems</strong>:</li>
+<li>
+<ul>
+<li>Low-Latency KV Cache Loading: <a href="https://arxiv.org/abs/2410.03065" target="_blank" rel="noopener">Cake</a></li>
+</ul>
+</li>
+<li>
+<ul>
+<li>Improve LLM Inference Throughput and Quality: <a href="https://arxiv.org/abs/2402.12280" target="_blank" rel="noopener">SGD</a></li>
+</ul>
+</li>
+<li>
+<ul>
+<li>Efficient Router for Multi-LLM Inference: <a href="https://arxiv.org/abs/2409.15518" target="_blank" rel="noopener">Eagle</a></li>
+</ul>
+</li>
+<li><strong>Machine Learning Systems</strong>:</li>
+<li>
+<ul>
+<li>Enhance ML System Safety: <a href="https://arxiv.org/abs/2409.10897" target="_blank" rel="noopener">AutoSpec</a></li>
+</ul>
+</li>
+<li>
+<ul>
+<li>Network and Compute Sharing across Mobile Devices: <a href="https://dl.acm.org/doi/10.1145/3625468.3647610" target="_blank" rel="noopener">Oasis</a></li>
+</ul>
+</li>
+<li>
+<ul>
+<li>Optimize Cloud Database Performance with ML:<a href="https://dl.acm.org/doi/pdf/10.1145/3448016.3457291" target="_blank" rel="noopener">Restune</a></li>
+</ul>
+</li>
+<li><strong>Network Systems</strong>:</li>
+<li>
+<ul>
+<li>5G Performance Analysis: <a href="https://dl.acm.org/doi/pdf/10.1145/3452296.3472923" target="_blank" rel="noopener">5G</a></li>
+</ul>
+</li>
+<li>
+<ul>
+<li>QUIC Performance Analysis: <a href="https://dl.acm.org/doi/pdf/10.1145/3589334.3645323" target="_blank" rel="noopener">QUIC</a></li>
+</ul>
+</li>
 </ul>
 
   </div>
