deploy: jsw-zorro/personal-website@05056ec0034b3bfc89933d78eda078d1c3ca27c8

--- a/publication/index.html
+++ b/publication/index.html
@@ -997,7 +997,7 @@
   </span>
   (2024).
   <a href="/publication/eagle/">Eagle: Efficient Training-Free Router for Multi-LLM Inference</a>.
-  NeurIPS 2024 MLfor Sys Workshop.
+  NeurIPS 2024 ML for Systems Workshop.
   
   <p>
 
