--- a/index.html
+++ b/index.html
@@ -1727,7 +1727,7 @@
   </span>
   (2024).
   <a href="/publication/eagle/">Eagle: Efficient Training-Free Router for Multi-LLM Inference</a>.
-  NeurIPS 2024 ML for Systems Workshop.
+  ML4Sys@NeurIPS24.
   
   <p>
 
