--- a/publication/eagle/index.html
+++ b/publication/eagle/index.html
@@ -971,7 +971,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-          <div class="col-12 col-md-9">NeurIPS 2024 ML for Systems Workshop</div>
+          <div class="col-12 col-md-9">Workshop on ML for Systems at NeurIPS 2024</div>
         </div>
       </div>
       <div class="col-md-1"></div>
