deploy: jsw-zorro/personal-website@1053d4273d7ae479d14b09bdebc8846deafe21ef

--- a/index.html
+++ b/index.html
@@ -1214,7 +1214,7 @@
 <p><strong>Network Systems</strong></p>
 <ul>
 <li>Performance analysis of 5G networks: <a href="https://dl.acm.org/doi/pdf/10.1145/3452296.3472923" target="_blank" rel="noopener">5G</a></li>
-<li>Performance analysis of QUIC transport: <a href="https://dl.acm.org/doi/pdf/10.1145/3589334.3645323" target="_blank" rel="noopener">QUIC</a></li>
+<li>Performance analysis of QUIC protocol: <a href="https://dl.acm.org/doi/pdf/10.1145/3589334.3645323" target="_blank" rel="noopener">QUIC</a></li>
 </ul>
 </li>
 </ul>
