deploy: jsw-zorro/personal-website@b809924928f35154a9d070a428fff65f7f0dd1e3

--- a/backup/publication/journal-article/index.html
+++ b/backup/publication/journal-article/index.html
@@ -1091,7 +1091,7 @@
     <div class="media-body">
       <h5 class="card-title"><a href="https://shuoweijin.com">Shuowei Jin</a></h5>
       <h6 class="card-subtitle">PhD Candidate at University of Michigan CSE</h6>
-      <p class="card-text">My research interests include efficient LLM inference algorithms/systems, machine learning systems, and mobile systems.</p>
+      <p class="card-text">My research interests include efficient LLM inference/training algorithms/systems, machine learning systems, and mobile systems.</p>
       <ul class="network-icon" aria-hidden="true">
   
     
