deploy: jsw-zorro/personal-website@3b9511b60dc586bff90f5d904ec2d93cbc666a2d

--- a/index.html
+++ b/index.html
@@ -1194,6 +1194,7 @@
 <ul>
 <li>Low-latency KV cache fetching: <a href="https://arxiv.org/abs/2410.03065" target="_blank" rel="noopener">Cake</a></li>
 <li>Semantic-Aware Parallel Decoding for LLMs: <a href="https://arxiv.org/abs/2402.12280" target="_blank" rel="noopener">Plato</a></li>
+<li>MoE Training on Heterogeneous GPUs: <a href="https://arxiv.org/abs/2504.03871" target="_blank" rel="noopener">HeterMoE</a></li>
 <li>Multi-model routing for LLM serving: <a href="https://arxiv.org/abs/2409.15518" target="_blank" rel="noopener">Eagle</a></li>
 </ul>
 </li>
