deploy: jsw-zorro/personal-website@db9759e330dab6e379d4ca3527e919286b0298c0

--- a/index.html
+++ b/index.html
@@ -2219,7 +2219,7 @@
 
   <div class="col-12 col-lg-8">
     <ul>
-<li><strong>Conference Reviewer</strong>: MM 2024, WWW 2024, NeurIPS 2023, ICML 2023.</li>
+<li><strong>Conference Reviewer</strong>: ICLR 2025, MM 2024, WWW 2024, NeurIPS 2023, ICML 2023.</li>
 <li><strong>Journal Reviewer</strong>: Neural Networks, IEEE TMC, IEEE Network Magazine.</li>
 <li><strong>Artifact Evaluation</strong>: SIGCOMM 2024.</li>
 </ul>
